# sea-orm-handson

./: .envrc  Cargo.toml  Makefile.toml  README.md  docker-compose.yaml
src/: main.rs
