[package]
name = "seaormho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
sea-orm = { version = "^0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print","with-chrono"], default-features = false}
chrono = "*"
tokio = { version = "1.14.0", features = ["rt", "rt-multi-thread", "macros", "net", "signal","sync", "test-util"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.2", features = ["time", "local-time", "env-filter"] }
